argocd/kustomize/base/homer-app-httproute/homer-app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-route
  namespace: homer-app 
spec:
  hostnames:
  - "homer.rajesh-kumar.in"
  parentRefs:
  - name: rancher-server-gateway 
    namespace: cilium-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher-master-homer-app 
      port: 8080
